2002-08-26  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* exp/atom.c:
	* exp/atom.h:

	  - Modified atom checks to allow variables in identifiers.

	* ident/ident.h:

	  - Added variable type.

	* parser/parser.y:
	* parser/scanner.l:

	  - Defined a function exit_error to be used instead of yyerror. 
	    Makes a call to exit.

	  - Uses stringlist to store variable definitions at the beginning of
	    a transformation definition.

	  - Uses compexp/compatom to store expressions with variables for
	    complex (non-ground) atoms and expressions.

	* datastruct/stringlist.c :
	* datastruct/stringlist.h :

	  - Added a simple list wrapper for strings.

	* trans/Makefile :
	* trans/varlist.c :
	* trans/varlist.h :

	  - Added a structure to hold a list of variables (name + identifier
	    mapping).

	* ident/identlist.c :

	  - More cleanups. Declare them as ident_type instead of ident_type *
	    to avoid memory allocation/dealocation.

2002-08-25  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* parser/parser.y :

	  - Some cleanups.

	  - Ensured that global lists get destroyed before exit, even on
	    error.

2002-08-23  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* docs/bnf.txt :
	* main/epilog.c :
	* parser/parser.h :
	* parser/parser.y :

	  - Moved list initialisation from main file to parser. Made
	    dummy rules at the beginning and end to initialise and
	    destroy lists.

	* Makefile :

	  - Top level makefile now cleans all dirs even without the debug
	    variable defined.

	* datastruct/Makefile :
	* exp/Makefile :
	* ident/Makefile :
	* main/Makefile :
	* parser/Makefile :
	* test/Makefile :

	  - When the debug symbol is defined, -O2 will not be included in
	    CFLAGS. Also -g will be included to allow actual debugging.

	* docs/bnf.txt :
	* parser/parser.y :

	  - Again separated expressions into ground_exp and comp_exp.
	    This allows the parser to accept variables and have strict
	    identifier checking.

	* docs/sample :
